// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/Face/Face should correctly render a face 1`] = `
<div
  className="be-face-wrapper"
>
  <PlainButton
    className="be-face"
    data-resin-target="skill-face"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="foo"
      src="bar"
      title="foo"
    />
  </PlainButton>
</div>
`;

exports[`elements/content-sidebar/Skills/Face/Face should correctly render a face when editing 1`] = `
<div
  className="be-face-wrapper"
>
  <PlainButton
    className="be-face"
    data-resin-target="skill-face"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="foo"
      src="bar"
      title="foo"
    />
  </PlainButton>
  <PlainButton
    className="be-face-delete"
    data-resin-target="skill-facedelete"
    onClick={[Function]}
    type="button"
  >
    <IconClose
      color="#999"
      height={16}
      width={16}
    />
  </PlainButton>
</div>
`;

exports[`elements/content-sidebar/Skills/Face/Face should correctly render a face when selected face is being rendered 1`] = `
<div
  className="be-face-wrapper"
>
  <PlainButton
    className="be-face"
    data-resin-target="skill-face"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="foo"
      src="bar"
      title="foo"
    />
    <IconMinus
      color="#fff"
    />
  </PlainButton>
</div>
`;

exports[`elements/content-sidebar/Skills/Face/Face should correctly render a face when un-selected face is being rendered 1`] = `
<div
  className="be-face-wrapper be-face-unselected"
>
  <PlainButton
    className="be-face"
    data-resin-target="skill-face"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="foo"
      src="bar"
      title="foo"
    />
  </PlainButton>
</div>
`;
